--- a/index.html
+++ b/index.html
@@ -27,9 +27,35 @@
         </header>
         <main>
             <section class="section-about">
-                <h2 class="heading-secondary">
-                    Exciting tours for adventurous people
-                </h2>
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        Exciting tours for adventurous people
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            You're going to fall in love with nature
+                        </h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid at asperiores quas saepe eum assumenda, natus magnam quidem consectetur. Quod non vitae, ut ipsam iste dolor delectus modi! Voluptatibus, dolore!
+                        </p>
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            Live adventures like you never have before
+                        </h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti neque, recusandae eaque repudiandae ad rem exercitationem mollitia cumque dignissimos error. Necessitatibus ab excepturi voluptatum similique illum quaerat quo eum error.
+                        </p>
+                        <a href="#" class="btn-text">Learn more &rarr;</a>
+                    </div>
+                    <div class="col-1-of-2">
+                        <div class="composition">
+                            <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                            <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                            <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
     </body>
