--- a/index.html
+++ b/index.html
@@ -134,15 +134,105 @@
                             </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-1">
-                            BACK
+                            <div class=card__cta>
+                                <div class="card__price-box">
+                                    <p class="card__price-only">Only</p>
+                                    <p class="card__price-value">$297</p>
+                                </div>
+                                <a href="#" class="btn btn--white">Book Now</a>
+                            </div>
                         </div>
                     </div>
                 </div>
+
                 <div class="col-1-of-3">
-                    Col 1 of 3
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--2">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--2">The Forest Hiker</span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>7 days tour</li>
+                                    <li>Up to 40 people</li>
+                                    <li>6 tour guides</li>
+                                    <li>Sleep in provided tents</li>
+                                    <li>difficult: medium</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-2">
+                            <div class=card__cta>
+                                <div class="card__price-box">
+                                    <p class="card__price-only">Only</p>
+                                    <p class="card__price-value">$897</p>
+                                </div>
+                                <a href="#" class="btn btn--white">Book Now</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
                 <div class="col-1-of-3">
-                    Col 1 of 3
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--3">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--3">The Snow Adventurer</span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>5 days tour</li>
+                                    <li>Up to 15 people</li>
+                                    <li>3 tour guides</li>
+                                    <li>Sleep in provided tents</li>
+                                    <li>difficult: hard</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-3">
+                            <div class=card__cta>
+                                <div class="card__price-box">
+                                    <p class="card__price-only">Only</p>
+                                    <p class="card__price-value">$567</p>
+                                </div>
+                                <a href="#" class="btn btn--white">Book Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="u-center-text u-margin-top-big">
+                <a href="#" class="btn btn--green">Discover All tours</a>
+            </div>
+        </section>
+        <section class="section-stories">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    We make people genuinely happy
+                </h2>
+            </div>
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-8.jpg" alt="Person" class="story__img">
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            I had the best week with my family
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci aliquam esse magni commodi
+                            eum possimus totam deserunt tempora enim reiciendis accusantium veritatis dicta similique
+                            provident saepe tenetur, ex soluta dolore! Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Sint provident maxime nulla voluptates fugiat! Fuga minima</p>
+                    </div>
                 </div>
             </div>
         </section>
