feat: finished all site content, now lets make ir responsible

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$297</p>
                                 </div>
-                                <a href="#" class="btn btn--white">Book Now</a>
+                                <a href="#popup" class="btn btn--white">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -186,7 +186,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$897</p>
                                 </div>
-                                <a href="#" class="btn btn--white">Book Now</a>
+                                <a href="#popup" class="btn btn--white">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -217,7 +217,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$567</p>
                                 </div>
-                                <a href="#" class="btn btn--white">Book Now</a>
+                                <a href="#popup" class="btn btn--white">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -357,6 +357,33 @@
             </div>
         </div>
     </footer>
+
+    <div class="popup" id="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="img/nat-8.jpg" alt="Tour Photo" class="popup__img">
+                <img src="img/nat-9.jpg" alt="Tour Photo" class="popup__img">
+            </div>
+            <div class="popup__right">
+                <a href="#section-tours" class="popup__close">&times;</a>
+                <h2 class="heading-secondary u-margin-bottom-small">
+                    Start Booking Now
+                </h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before
+                    booking</h3>
+                <p class="popup__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quos
+                    temporibus,
+                    deleniti et ducimus exercitationem maiores impedit porro reiciendis amet excepturi fuga rem illum
+                    perferendis omnis cum saepe rerum nisi. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Laboriosam nesciunt veritatis quo modi assumenda temporibus sint. Quis quidem architecto, explicabo
+                    velit est suscipit voluptas, labore vel, accusantium ipsa quisquam nisi? Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Nobis aperiam est dolores autem ea quasi deserunt minima facere
+                    corporis ab dicta minus atque quo, enim explicabo libero inventore, cupiditate eos?</p>
+                <a href="#" class="btn btn--green">Book now!</a>
+            </div>
+        </div>
+    </div>
+
 </body>
 <!-- <section class="grid-test">
         <div class="row">
