--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="css/icon-font.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
@@ -71,9 +70,19 @@
                 </div>
                 <div class="col-1-of-2">
                     <div class="composition">
-                        <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                        <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w" src="img/nat-1-large.jpg"
+                            sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px" alt="Photo 1"
+                            class="composition__photo composition__photo--p1" />
+                        <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w" src="img/nat-2-large.jpg"
+                            sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px" alt="Photo 2"
+                            class="composition__photo composition__photo--p2" />
+                        <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w" src="img/nat-3-large.jpg"
+                            sizes="(max-width: 56.25em) 30vw, (max-width: 37.5em) 30vw, 300px" alt="Photo 3"
+                            class="composition__photo composition__photo--p3" />
+                        <!--
                         <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
                         <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                        -->
                     </div>
                 </div>
             </div>
@@ -319,7 +328,7 @@
                                         Large Tour Group
                                     </label>
                                 </div>
-                                <div class="form__group">
+                                <div class="form__group form__submit">
                                     <button class="btn btn--green">Next Step &rarr;</button>
                                 </div>
                             </div>
@@ -331,7 +340,13 @@
     </main>
     <footer class="footer">
         <div class="footer__logo-box">
-            <img src="img/logo-green-2x.png" alt="full logo" class="footer__logo">
+            <!-- ART DIRECTION! -->
+            <picture class="footer__logo">
+                <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x"
+                    media="(max-width: 37.5em)">
+                <img src="img/logo-green-2x.png" srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x"
+                    alt="full logo">
+            </picture>
         </div>
         <div class="row">
             <div class="col-1-of-2">
